Bottom border for footer no longer stretches across width of page. Each li footer has a bottom border.

--- a/sass/_articles.scss
+++ b/sass/_articles.scss
@@ -8,8 +8,8 @@ body{
 
   .octocat {
     list-style: none;
-    width: 300px;
-    padding-bottom: 26px;
+    width: $octocatListWidth;
+    padding-bottom: $octocatListPadding;
     font-family: $font;
     // border-bottom: 1px solid $themeColor;
   }
@@ -17,26 +17,27 @@ body{
   .catPic {
     border: 1px solid $themeColor;
     width: 250px;
-    height: 250px;
     margin: 0;
     // margin-top: 25px;
     // margin-bottom: 15px;
   }
 
-  li {
-    display: inline;
-  }
+  // li {
+  //   display: inline;
+  // }
 
   a {
     text-decoration: none;
-    color: #000000;
+    color: $anchorColor;
   }
 
   footer {
     margin: 0;
     font-size: 0.3em;
+    width: 250px;
     border-bottom: 1px solid $themeColor;
     margin-top: 5px;
+    // position: relative;
   }
 
   h3 {
@@ -48,16 +49,21 @@ body{
   cite {
     float: right;
     position: relative;
-    padding: 10px 50px 0 0;
+    padding: 10px 0 0 0;
     margin-bottom: 20px;
     margin-top: -30px;
     color: #999999;
     font-weight: bold;
+    // border-bottom: 1px solid $themeColor;
+
+  }
+
+  .avatar{
+    list-style: none;
   }
 
   .avatars {
     width: 20px;
-    height: 20px;
     position: absolute;
     bottom: 0;
     right: 80px;
@@ -71,6 +77,7 @@ body{
     border-bottom: 5px solid #999999;
     transform: rotate(180deg);
     margin-left: 225px;
+    // position: absolute;
   }
 
   .catName {
@@ -84,14 +91,12 @@ body{
 
 @media screen and (min-width: 700px)  {
   .octocat {
-    width: 700px;
     float: left;
   }
 }
 
 @media screen and (min-width: 1050px) {
   .octocat {
-    width: 1050px;
     float:left;
   }
 }
